--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
+    "@mui/x-data-grid": "^8.1.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "aws-amplify": "^6.14.3",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "gantt-task-react": "^0.3.9",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "numeral": "^2.0.6",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0"
